display database restaurant as markers
this update connects to the database and displays all of the restaurants on the map as markers with infoWindows

--- a/CaseBites/Pages/map.ejs
+++ b/CaseBites/Pages/map.ejs
@@ -41,7 +41,7 @@
         <div>Review Points: 50</div>
     </div>
     <div id="map"></div>
-    <div id="data"><%= JSON.stringify(data) %></div>
+    <div id="data" style="display:none;"><%= JSON.stringify(data) %></div>
 
     <script>
 
