--- a/CaseBites/Pages/map.ejs
+++ b/CaseBites/Pages/map.ejs
@@ -58,6 +58,12 @@
                         stylers: [
                             { visibility: "off" }
                         ]
+                    },
+                    {
+                        featureType: "transit",
+                        stylers: [
+                            { visibility: "off" }
+                        ]
                     }
                 ]
             }
