--- a/CaseBites/Pages/map.ejs
+++ b/CaseBites/Pages/map.ejs
@@ -13,13 +13,13 @@
                 color: #333;
             }
             #map{
-                height:800px;
+                height:700px;
                 width:100%;
             }
             #studentInfo {
                 position: absolute;      
-                top: 0;
-                right: 0;
+                bottom: 0;
+                left: 0;
                 z-index: 1;
                 margin: 20px auto;
                 border: 1px solid #ccc;
