Remove Street View

--- a/CaseBites/Pages/map.ejs
+++ b/CaseBites/Pages/map.ejs
@@ -50,6 +50,7 @@
             var options = {
                 zoom:15,
                 center: {lat:41.507213,lng:-81.606955},
+                streetViewControl: false,
                 //Hide Default Google Maps Icons
                 styles: [
                     {
