--- a/CaseBites/Pages/Local CaseBites/user_login/src/Map.css
+++ b/CaseBites/Pages/Local CaseBites/user_login/src/Map.css
@@ -17,14 +17,24 @@ body {
   border: 1px solid #ccc;
   padding: 20px;
   background-color: white;
+  font-size: 25px;
+  justify-content: center;
 }
 
 #header {
   padding: 10px;
   text-align: center;
-  font-size: 24px;
+  font-size: 30px;
 }
 
 #data {
   display: none;
+}
+
+.mapButton {
+  height: auto;
+  margin: 5px;
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
 }
