--- a/CaseBites/Pages/node-rest-api/public/style.css
+++ b/CaseBites/Pages/node-rest-api/public/style.css
@@ -29,6 +29,8 @@ header {
 .category img {
   width: 100%;
   margin-top: 20px;
+  outline: none;
+  border: none;
 }
 
 @media (max-width: 768px) {
