--- a/CaseBites/Pages/node-rest-api/public/style.css
+++ b/CaseBites/Pages/node-rest-api/public/style.css
@@ -66,13 +66,13 @@ form button {
 .comment-box {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start; /* change align-items to flex-start */
+  align-items: flex-start;
   border: 1px solid rgba(0, 0, 0, 0.2);
   padding: 50px 10px;
   margin-bottom: 0px;
   max-width: 80%;
   margin-left: 10px;
-  position: relative; /* add position: relative */
+  position: relative; 
 }
 
 .comment-box p {
@@ -86,18 +86,15 @@ form button {
   font-size: 16px;
   text-decoration: none;
   cursor: pointer;
-  position: absolute; /* add position: absolute */
-  top: 10px; /* adjust top and right values as needed */
+  position: absolute;
+  top: 10px;
   right: 10px;
 }
 
-.comment-box .delete-button {
-  /* remove this rule */
-}
 
-.comment-box button + button { /* add this rule */
+.comment-box button + button {
   margin-left: 10px;
-  right: 70px; /* adjust right value to position the update button */
+  right: 70px; 
 }
 .comment-box button:hover {
   text-decoration: underline;
