--- a/CaseBites/Pages/Local CaseBites/user_login/src/Navbar.css
+++ b/CaseBites/Pages/Local CaseBites/user_login/src/Navbar.css
@@ -18,8 +18,9 @@ nav li a, span {
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 16px 16px;
   text-decoration: none;
+  font-size: 30px;
 }
 
 nav li a:hover {
